@@ -38,6 +38,9 @@ Bug Fixes
 * Don't traceback trying to unversion children files of an already
   unversioned directory.  (Vincent Ladeuil, #494221)
 
+* ``HTTP/1.1` test servers now set a ``Content-Length`` header to comply
+  with pedantic ``HTTP/1.1`` clients. (Vincent Ladeuil, #568421)
+
 * Progress bars prefer to truncate the text message rather than the
   counters.  The spinner is shown between the network transfer indicator
   and the progress message.  (Martin Pool)
